deployments/dictator/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dictator
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: dictator
