deployments/dictator/bases/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: dictator.wellcloud.welljoint.com
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU8xM2hZZnh2K1NDTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ014SVRBZkJnTlYKQkFNTUdHUnBZM1JoZEc5eUxtdDFZbVV0YzNsemRHVnRMbk4yWXpBZ0Z3MHlNekE1TURVd05qTXpOVEJhR0E4eQpNRFV4TURFeU1UQTJNek0xTUZvd0l6RWhNQjhHQTFVRUF3d1laR2xqZEdGMGIzSXVhM1ZpWlMxemVYTjBaVzB1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXVZc2tVbnRnTDJXaFdmTkEKOXBCY1NRVHJwMU9EL0dTRXVKWmRpdFdTelNuKyt6TmJCa3JhT3pUblR2Tk9RNGkrSmQ0eFpHeHpEeWg1M1FrNAp4UEFNQUxwSnVS [...]
      service:
        name: dictator
        path: /mutate-apps-v1-daemonset
    failurePolicy: Fail
    name: mdaemonset.kb.io
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - daemonsets
    sideEffects: None
    namespaceSelector:
      matchLabels:
        pod-admission-webhook-injection: enabled
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU8xM2hZZnh2K1NDTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ014SVRBZkJnTlYKQkFNTUdHUnBZM1JoZEc5eUxtdDFZbVV0YzNsemRHVnRMbk4yWXpBZ0Z3MHlNekE1TURVd05qTXpOVEJhR0E4eQpNRFV4TURFeU1UQTJNek0xTUZvd0l6RWhNQjhHQTFVRUF3d1laR2xqZEdGMGIzSXVhM1ZpWlMxemVYTjBaVzB1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXVZc2tVbnRnTDJXaFdmTkEKOXBCY1NRVHJwMU9EL0dTRXVKWmRpdFdTelNuKyt6TmJCa3JhT3pUblR2Tk9RNGkrSmQ0eFpHeHpEeWg1M1FrNAp4UEFNQUxwSnVS [...]
      service:
        name: dictator
        path: /mutate-apps-v1-deployment
    failurePolicy: Fail
    name: mdeployment.kb.io
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
    sideEffects: None
    namespaceSelector:
      matchLabels:
        pod-admission-webhook-injection: enabled
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU8xM2hZZnh2K1NDTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ014SVRBZkJnTlYKQkFNTUdHUnBZM1JoZEc5eUxtdDFZbVV0YzNsemRHVnRMbk4yWXpBZ0Z3MHlNekE1TURVd05qTXpOVEJhR0E4eQpNRFV4TURFeU1UQTJNek0xTUZvd0l6RWhNQjhHQTFVRUF3d1laR2xqZEdGMGIzSXVhM1ZpWlMxemVYTjBaVzB1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXVZc2tVbnRnTDJXaFdmTkEKOXBCY1NRVHJwMU9EL0dTRXVKWmRpdFdTelNuKyt6TmJCa3JhT3pUblR2Tk9RNGkrSmQ0eFpHeHpEeWg1M1FrNAp4UEFNQUxwSnVS [...]
      service:
        name: dictator
        path: /mutate-apps-v1-statefulset
    failurePolicy: Fail
    name: mstatefulset.kb.io
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statefulsets
    sideEffects: None
    namespaceSelector:
      matchLabels:
        pod-admission-webhook-injection: enabled
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: dictator.wellcloud.welljoint.com
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU8xM2hZZnh2K1NDTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ014SVRBZkJnTlYKQkFNTUdHUnBZM1JoZEc5eUxtdDFZbVV0YzNsemRHVnRMbk4yWXpBZ0Z3MHlNekE1TURVd05qTXpOVEJhR0E4eQpNRFV4TURFeU1UQTJNek0xTUZvd0l6RWhNQjhHQTFVRUF3d1laR2xqZEdGMGIzSXVhM1ZpWlMxemVYTjBaVzB1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXVZc2tVbnRnTDJXaFdmTkEKOXBCY1NRVHJwMU9EL0dTRXVKWmRpdFdTelNuKyt6TmJCa3JhT3pUblR2Tk9RNGkrSmQ0eFpHeHpEeWg1M1FrNAp4UEFNQUxwSnVS [...]
      service:
        name: dictator
        path: /validate-apps-v1-daemonset
    failurePolicy: Fail
    name: vdaemonset.kb.io
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - daemonsets
    sideEffects: None
    namespaceSelector:
      matchLabels:
        pod-admission-webhook-injection: enabled
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU8xM2hZZnh2K1NDTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ014SVRBZkJnTlYKQkFNTUdHUnBZM1JoZEc5eUxtdDFZbVV0YzNsemRHVnRMbk4yWXpBZ0Z3MHlNekE1TURVd05qTXpOVEJhR0E4eQpNRFV4TURFeU1UQTJNek0xTUZvd0l6RWhNQjhHQTFVRUF3d1laR2xqZEdGMGIzSXVhM1ZpWlMxemVYTjBaVzB1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXVZc2tVbnRnTDJXaFdmTkEKOXBCY1NRVHJwMU9EL0dTRXVKWmRpdFdTelNuKyt6TmJCa3JhT3pUblR2Tk9RNGkrSmQ0eFpHeHpEeWg1M1FrNAp4UEFNQUxwSnVS [...]
      service:
        name: dictator
        path: /validate-apps-v1-deployment
    failurePolicy: Fail
    name: vdeployment.kb.io
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
    sideEffects: None
    namespaceSelector:
      matchLabels:
        pod-admission-webhook-injection: enabled
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lKQU8xM2hZZnh2K1NDTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ014SVRBZkJnTlYKQkFNTUdHUnBZM1JoZEc5eUxtdDFZbVV0YzNsemRHVnRMbk4yWXpBZ0Z3MHlNekE1TURVd05qTXpOVEJhR0E4eQpNRFV4TURFeU1UQTJNek0xTUZvd0l6RWhNQjhHQTFVRUF3d1laR2xqZEdGMGIzSXVhM1ZpWlMxemVYTjBaVzB1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXVZc2tVbnRnTDJXaFdmTkEKOXBCY1NRVHJwMU9EL0dTRXVKWmRpdFdTelNuKyt6TmJCa3JhT3pUblR2Tk9RNGkrSmQ0eFpHeHpEeWg1M1FrNAp4UEFNQUxwSnVS [...]
      service:
        name: dictator
        path: /validate-apps-v1-statefulset
    failurePolicy: Fail
    name: vstatefulset.kb.io
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statefulsets
    sideEffects: None
    namespaceSelector:
      matchLabels:
        pod-admission-webhook-injection: enabled
